--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "umi-plugin-extensions",
-  "version": "1.0.1",
+  "name": "umi-plugin-chrome-extensions",
+  "version": "1.0.2",
   "description": "a umi plugin to build chrome extensions",
-  "homepage": "https://github.com/arvinxx/umi-plugin-extensions#readme",
+  "homepage": "https://github.com/hikaruchang/umi-plugin-chrome-extensions#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/arvinxx/umi-plugin-extensions.git"
+    "url": "git+https://github.com/hikaruchang/umi-plugin-chrome-extensions.git"
   },
   "main": "lib/index.js",
   "types": "types/index.d.ts",
@@ -52,54 +52,61 @@
     ]
   },
   "dependencies": {
-    "fs-extra": "^10",
+    "fs-extra": "^11",
     "generate-json-webpack-plugin": "^2",
-    "got": "^11",
+    "got": "^14.2.0",
     "webpack": "^5"
   },
   "devDependencies": {
-    "@commitlint/cli": "^12",
-    "@testing-library/react": "^13",
-    "@types/fs-extra": "^9",
-    "@types/generate-json-webpack-plugin": "^0.3.2",
+    "@commitlint/cli": "^19",
+    "@testing-library/jest-dom": "^6",
+    "@testing-library/react": "^14",
+    "@types/fs-extra": "^11",
+    "@types/generate-json-webpack-plugin": "^0.3.7",
+    "@types/got": "^9.6.12",
     "@types/jest": "^29",
     "@types/lodash": "^4",
-    "@types/node": "^18",
+    "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/testing-library__jest-dom": "^5",
     "@umijs/max": "^4",
     "@umijs/test": "^4",
     "commitlint-config-gitmoji": "^2",
-    "concurrently": "^6",
+    "concurrently": "^8",
     "conventional-changelog-gitmoji-config": "^1",
     "cross-env": "^7",
     "eslint": "^8",
     "father": "^4",
-    "husky": "^8",
+    "husky": "^9",
     "jest": "^29",
     "jest-environment-jsdom": "^29",
-    "lint-staged": "^10",
-    "prettier": "^2.7.1",
+    "lint-staged": "^15",
+    "prettier": "^3.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "semantic-release": "^19",
+    "semantic-release": "^23",
     "semantic-release-config-gitmoji": "^1",
     "ts-jest": "^29",
     "ts-node": "^10",
-    "typedoc": "^0.23",
-    "typedoc-plugin-external-module-map": "^1",
+    "typedoc": "^0.25",
+    "typedoc-plugin-external-module-map": "^2",
     "typedoc-plugin-markdown": "^3",
-    "typescript": "^4",
-    "umi": "^4",
-    "@testing-library/jest-dom": "^5"
+    "typescript": "^5",
+    "umi": "^4"
   },
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
-  "authors": {
-    "name": "Arvin Xu",
-    "email": "arvinx@foxmail.com"
-  }
+  "authors": [
+    {
+      "name": "Arvin Xu",
+      "email": "arvinx@foxmail.com"
+    },
+    {
+      "name": "Hikaru",
+      "email": "i@rua.moe",
+    }
+  ]
 }
